--- a/Bayesian_Analysis_Terrorism.ipynb
+++ b/Bayesian_Analysis_Terrorism.ipynb
@@ -4,7 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: EDA"
+    "# Using Bayesian Analysis to Analyze Terrorism\n",
+    "\n",
+    "## Focus: Colombia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this project I will use Bayesian statistics to take a look at University of Maryland's Global Terrorism Database. I have chose kidnapping in Colombia during the late 90's as my study subject. \n",
+    "\n",
+    "The project is divided into 4 parts:\n",
+    "\n",
+    "1) I will perform Exploratory Data Analysis on our data\n",
+    "\n",
+    "2) I will run a Bayesian analysis comparing two terrorist groups using kidnapping in late 90's Colombia.\n",
+    "\n",
+    "3) To approximate real data for 1993 that was lost in the past, we will impute data based on trends.\n",
+    "\n",
+    "4) I explain the methods used in a short write-up."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1: EDA"
    ]
   },
   {
@@ -3170,11 +3196,7 @@
     "# Originally I fitted an ARIMA model, but the value was too high (approx: 2500), so I scratched the idea in fears I was implemending the model improperly.\n",
     "# Later I toyed with the idea of using a linear regression by setting dummies, but ultimately decided that rolling average was simple and informed, giving me a value that was more in tune with time series trends.\n",
     "\n",
-    "rollavg = data[data['attacktype1']==3]\n",
-    "\n",
-    "# attdummies = pd.get_dummies(rollavg['attacktype1'])\n",
-    "\n",
-    "# rollavg = pd.concat([rollavg, attdummies], axis=1)"
+    "rollavg = data[data['attacktype1']==3]\n"
    ]
   },
   {
@@ -3780,15 +3802,6 @@
     "    \n",
     "    Using the previous 3 and following 3 values for bombing in adjacent years, I used the above mentioned parameters and generated an average, which I consider to be a faithful approximation to the amount of successful bombings perpetrated worldwide in 1993: 1472\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
